--- a/package.json
+++ b/package.json
@@ -14,8 +14,17 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.0",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
     "path": "^0.12.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ernestgio/LOOKal.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Ernestgio/LOOKal/issues"
+  },
+  "homepage": "https://github.com/Ernestgio/LOOKal#readme"
 }
