--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Kelompok 05 STI 2018",
   "license": "ISC",
   "dependencies": {
+    "@fontsource/source-sans-pro": "^4.2.2",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
