--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://dbUser:dbUserPassword@cluster0.n0oqv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URI=mongodb://dbUser:dbUserPassword@cluster0-shard-00-00.n0oqv.mongodb.net:27017,cluster0-shard-00-01.n0oqv.mongodb.net:27017,cluster0-shard-00-02.n0oqv.mongodb.net:27017/myFirstDatabase?ssl=true&replicaSet=atlas-7dt3r4-shard-0&authSource=admin&retryWrites=true&w=majority
 
 PORT=3000
